fixing quotation alignment

--- a/CSS Grid/Grid.css
+++ b/CSS Grid/Grid.css
@@ -22,8 +22,11 @@ body {
   .one {
     background-color: #733FC7;
     color: #FFFFFF;
-    grid-row: 1/2;
-    grid-column: 1/3;
+    grid-row:1/2;
+    grid-column:1/3;
+    background-image: url("images/bg-pattern-quotation.svg");
+    background-repeat: no-repeat;
+    background-position: right 50px top 0px;
   }
   .two {
     background-color: #49556A;
@@ -92,19 +95,6 @@ body {
   .name{
       font-weight: 400;
   }
-  .quotation{
-      grid-row: 1/2;
-      grid-column: 2/3;
-      transform: scale(3);
-      margin-top: 20px;
-      margin-left: 200px;
-      opacity: 0.5;
-      position: absolute;
-      left:200px;
-       padding: 50px;
-       width: 100px;
-       height: 50px;
-       
-  }
+  
       
   
